Fixed nav drawer on mobile

--- a/site/css/src/partials/_nav.scss
+++ b/site/css/src/partials/_nav.scss
@@ -64,4 +64,9 @@ $nav-pills-bg-color: #F39538;
           background-color: $nav-pills-bg-color;
         }
     }
+    
+    .nav-justified {
+      width: 100%;
+      padding-top: 40px;
+    }
 }
